# seal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  seal.py  seal_gui.py
.github/workflows/: ci.yml  pages.yml
docs/: FORMAT.md
tests/: test_seal.py
web/: INTEGRITY.txt  README.md  app.js  index.html  package.json  seal.js  tar.js  verify.sh  zip.js
web/tests/: js_decrypt.mjs  js_encrypt.mjs  test_crosscompat.mjs
